--- a/Atividades/jokenpo.html
+++ b/Atividades/jokenpo.html
@@ -2,23 +2,65 @@
 <html>
     <head>
         <title>jokenpo lol</title>
+        <style>
+            html, body{
+                height: 100vh;
+                background-image: linear-gradient(to bottom, rgb(218, 238, 255), white);
+            }
+            .titulo{
+                font-family: sans-serif;
+                display: flex;
+                justify-content: center;
+                color: rgb(13, 13, 87);
+            }
+            .paragrafo{
+                font-family: sans-serif;
+                font-size: medium;
+                display: flex;
+                justify-content: center;
+            }
+            button{
+                width: 150px;
+                height: 50px;
+                border-radius: 10%;
+                font-family: sans-serif;
+                font-weight: bold;
+                font-size: 20px;
+                color: white;
+            }
+            .botoes{
+                display: flex;
+                justify-content: center;
+                gap: 20px;
+            }
+            .pedra{
+                background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.692), rgba(0, 0, 0, 0.801));
+            }
+            .pedra:hover{
+                background-color: rgba(0, 0, 0, 0.432);;
+            }
+        </style>
     </head>
 
     <body>
-        <button onclick="
-            pcMovimento();
-            playerMovimento('pedra');
-        ">pedra</button>
+        <h1 class="titulo">Pedra, Papel, Tesoura</h1>
+        <p class="paragrafo">Escolha sua jogada:</p>
+        <div class="botoes">
+            <button class="pedra" onclick="
+                pcMovimento();
+                playerMovimento('pedra');
+            ">✊ Pedra</button>
         
-        <button onclick="
-            pcMovimento();
-            playerMovimento('papel');
-        ">papel</button>
+            <button class="papel" onclick="
+                pcMovimento();
+                playerMovimento('papel');
+            ">✋ Papel</button>
 
-        <button onclick="
-            pcMovimento();
-            playerMovimento('tesoura');
-        ">tesoura</button>
+            <button class="tesoura" onclick="
+                pcMovimento();
+                playerMovimento('tesoura');
+            ">✌ Tesoura</button>
+        </div>
 
         <script>
             function pcMovimento(){
