--- a/lista de afazeres completo/listaDeAfazeres.html
+++ b/lista de afazeres completo/listaDeAfazeres.html
@@ -13,12 +13,11 @@
         </div>
         <div id="toDoLista">
             <ul id="lista">
-                <input type="checkbox"> teste
             </ul>
         </div>
         <div id="criarTarefaContainer">
             <input type="text" placeholder="Add Tarefa" id="inputTarefa">
-            <button id="botao" onclick="adicionarTarefa()">+</button>
+            <button id="botao">+</button>
         </div>
     </div>
     <script src="listaDeAfazeres.js"></script>
